// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with members 1`] = `
<div>
  <div
    class="MemberListGroup"
  >
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      />
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 10 of 15
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 next"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with no members 1`] = `
<div>
  <div
    class="MemberListGroup"
  >
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      />
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;
